Sugati/src/objects/Invoice_Number__c.object
<CustomObject>
    <fields>
        <fullName>IN_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice Numbers</relationshipLabel>
        <relationshipName>Invoice_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IN_Last_Invoice_Number__c</fullName>
        <label>Last Invoice Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_Office__c</fullName>
        <label>Office</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invoice Number</label>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>